--- a/config/agent_config.yaml
+++ b/config/agent_config.yaml
@@ -7,20 +7,38 @@ agent:
   interaction_timeout: 300  # Seconds until session times out after inactivity
   max_history_length: 20    # Maximum conversation turns to keep in history
   default_use_case: "mutual_funds"
+  
+  # LLM Configuration
+  llm:
+    provider: "openai"  # openai, azure, or others
+    model_name: "gpt-4o"  # or other models like gpt-3.5-turbo
+    temperature: 0.7
+    max_tokens: 500
+    api_key: ""  # Set via OPENAI_API_KEY environment variable
+    prompt_templates_dir: "config/prompts"
+    # Proxy configuration if needed
+    proxy: ""
 
 # Voice Settings
 voice:
   elevenlabs:
     voice_id: "21m00Tcm4TlvDq8ikWAM"  # Default voice ID (can be customized)
+    model_id: "eleven_multilingual_v2"
     stability: 0.6
     similarity_boost: 0.75
     style: 0.3
     use_speaker_boost: true
+    audio_format: "mp3"
+    output_dir: "data/audio_cache"
+    
   twilio:
     webhook_base_url: "https://your-webhook-url.com"  # Update with your public URL
     port: 5000
     host: "0.0.0.0"
     debug: false
+    timeout: 30
+    retry_attempts: 3
+    voice_name: "alice"  # Fallback voice if ElevenLabs is unavailable
 
 # Knowledge Base Settings
 knowledge_base:
@@ -28,6 +46,11 @@ knowledge_base:
   index_dir: "data/indices"
   cache_results: true
   cache_expiry: 3600  # Seconds
+  embedding_model: "all-MiniLM-L6-v2"  # Sentence transformer model for embeddings
+  vector_db:
+    enabled: false  # Set to true to use a vector database
+    type: "faiss"   # faiss, chroma, or others
+    path: "data/vector_db"
 
 # Tools Configuration
 tools:
@@ -46,6 +69,12 @@ logging:
   log_to_file: true
   log_file: "logs/bfsi_agent.log"
   log_format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  
+  # Additional logging options
+  request_logging: true    # Log API requests (useful for debugging)
+  response_logging: true   # Log API responses
+  conversation_logging: true  # Log complete conversations
+  anonymize_pii: true         # Attempt to anonymize PII in logs
 
 # Service Integration
 services:
@@ -55,3 +84,9 @@ services:
   database:
     enabled: false
     connection_string: "sqlite:///data/agent_data.db"
+  
+  # Analytics integration
+  analytics:
+    enabled: false
+    type: "custom"  # custom, google, mixpanel, etc.
+    endpoint: ""
