--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ dependencies = [
     "PyPDF2>=3.0.1",
     "loguru>=0.7.0",
     "elevenlabs>=0.2.26",
+    "sentence-transformers>=2.2.2",
+    "scikit-learn>=1.3.0",
+    "numpy>=1.24.3",
+    "openai>=1.3.5",
     "python-dateutil>=2.8.2",
     "tenacity>=8.2.3",
     "PyJWT>=2.8.0"
